Make journal Amount Editable

--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "id": "84b8eed6-fd8c-49af-a671-c69ba71b6b05",
   "name": "VANNILA",
-  "publisher": "FMIL",
-  "version": "1.0.0.13",
+  "publisher": "KBS",
+  "version": "1.0.0.14",
   "brief": "",
   "description": "",
   "privacyStatement": "",
