--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "request": "launch",
             "type": "al",
             "environmentType": "Sandbox",
-            "environmentName": "sandbox",
+            "environmentName": "Sandbox",
             "tenant": "aeca425a-f436-437d-a888-05e2838c4f9e",
             "startupObjectId": 22,
             "startupObjectType": "Page",
